--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"gh-pages": "^2.2.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
-		"react-scripts": "3.4.1"
+		"react-scripts": "3.4.1",
+		"semantic-ui-react": "^0.88.2"
 	},
 	"homepage": "greene729.github.io",
 	"scripts": {
